--- a/css/global.css
+++ b/css/global.css
@@ -4,8 +4,11 @@ img {
 }
 
 ul,
-ol {
+ol,
+p {
     list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
 @font-face {
@@ -13,6 +16,11 @@ ol {
     src: url('../fonts/6xKtdSZaM9iE8KbpRA_hK1QN.woff2');
 }
 
+html {
+    height: 100%;
+}
+
 body {
     font-family: 'Quicksand', sans-serif;
+    height: 100%;
 }
